--- a/sports_athletic/views/sports_competitions_view.xml
+++ b/sports_athletic/views/sports_competitions_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <menuitem name="Compétitions et Résultats" id="base.menu_root_competitions" sequence="2" groups="sports_athletic.competition_user"/>
+        <menuitem name="Compétitions et Résultats" id="base.menu_root_competitions" sequence="2" groups="sports_athletic.competition_user" web_icon="sports_athletic,static/description/competition.jpeg"/>
         <menuitem name="Compétitions et Résultats" id="base.menu_root_competition_epreuve" sequence="1"  parent="base.menu_root_competitions"/>
         <!--Epreuve-->
         <record id="view_epreuve_form" model="ir.ui.view">
@@ -96,45 +96,44 @@
             <field name="arch" type="xml">
                 <form string="Compétitions">
                     <header>
-                        <field name="state" widget="statusbar" statusbar_visible="brouillon,en_att_valid,en_att_org,att_val_pre_eng,att_val_eng,att_conf_eng,liste_eng_conf,calcul_pt_club"  statusbar_colors='{"dem_rejetee":"red"}'/>
+                        <field name="state" widget="statusbar" statusbar_visible="brouillon,ouverte,confirmee,resultats,en_att_valid,en_att_org,att_val_pre_eng,att_val_eng,att_conf_eng,liste_eng_conf,calcul_pt_club"  statusbar_colors='{"dem_rejetee":"red"}'/>
                     </header>
                     <sheet>
                         <div class="oe_title">
                         </div>
                         <group>
                             <group>
-                                <field name="name" readonly="1"/>
-                                <field name="niveau" required="1"/>
-                                <field name="date_debut" required="1"/>
-                                <field name="lieu" />
-                                <field name="type" required="1"/>
+                                <field name="name" attrs="{'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
+                                <!-- <field name="niveau" required="1"/> -->
+                                <field name="date_debut" required="1" attrs="{'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
+                                <!-- <field name="type" required="1"/> -->
+                                <field name="saison_id" required="1" attrs="{'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
                             </group>
                             <group>
-                                <field name="name_competition" required="1"/>
-                                <field name="saison_id" required="1"/>
-                                <field name="date_fin" required="1"/>
-                                <field name="calendar_id" required="1"/>
-                                <field name="respect_cahier_charge" />
-                                <field name="familles_id" required="1" domain="[('type', '=', type)]" attrs="{'invisible':[('type','=', False)]}"/>
-                                <field name="timing" />
+                                <field name="name_competition" required="1" attrs="{'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
+                                <field name="date_fin" required="1" attrs="{'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
+                                <field name="calendar_id" required="1" attrs="{'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
+                                <field name="respect_cahier_charge" attrs="{'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
+                                <!-- <field name="familles_id" required="1" domain="[('type', '=', type)]" attrs="{'invisible':[('type','=', False)]}"/> -->
+                                <field name="timing" attrs="{'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
                             </group>
                         </group>
                         <group>
                             <group>
-                                <field name="organisateur"/>
-                                <field name="autre_organisateur" attrs="{'invisible':[('organisateur','!=','Autre')]}"/>
-                                <field name="club_id" attrs="{'invisible':[('organisateur','!=','Club')]}"/>
-                                <field name="ligue_id" attrs="{'invisible':[('organisateur','!=','Ligue')]}"/>
-                                <field name="objectif"  />
+                                <field name="organisateur" attrs="{'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
+                                <field name="autre_organisateur" attrs="{'invisible':[('organisateur','!=','Autre')],'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
+                                <field name="club_id" attrs="{'invisible':[('organisateur','!=','Club')],'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
+                                <field name="ligue_id" attrs="{'invisible':[('organisateur','!=','Ligue')],'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
+                                <field name="objectif" attrs="{'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
                             </group>
                             <group>
-                                <field name="participation_competition"  />
-                                <field name="critere_invitation_qualification" attrs="{'invisible':[('participation_competition','not in',('Sur Invitation','Sur Qualification'))]}"/>
+                                <field name="participation_competition" attrs="{'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
+                                <field name="critere_invitation_qualification" attrs="{'invisible':[('participation_competition','not in',('Sur Invitation','Sur Qualification'))],'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
                             </group>
                             <group>
-                                <field name="prise_compte_frma_ids" widget="many2many_tags"/>
-                                <field name="epreuves_disputees"/>
-                                <field name="category_age_ids"  attrs="{'readonly':[('epreuves_disputees','!=','categories_age')]}" widget="many2many_tags"/>
+                                <field name="prise_compte_frma_ids" widget="many2many_tags" attrs="{'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
+                                <field name="epreuves_disputees" attrs="{'readonly':['|','|',('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}"/>
+                                <field name="category_age_ids"  attrs="{'readonly':['|','|','|',('epreuves_disputees','!=','categories_age'),('state','=','ouverte'),('state','=','confirmee'),('state','=','resultats')]}" widget="many2many_tags"/>
                             </group>
                             <group string="Epreuves">
                                 <field name="epreuve_ids" nolabel="1">
@@ -172,18 +171,19 @@
                                     </tree>
                                 </field>
                             </page>
-                            <page string="Participants">
+
+                            <page string="Participants" name="comp_participants">
                                 <group> 
                                     <button name="%(action_view_invitation_participants)d" string="Inviter Les Participants"
                                         type="action" icon='STOCK_MEDIA_NEXT'/>
                                 </group>
-                                <field name="participants_ids" colspan="4" nolabel="1" readonly="1">
+                                <field name="participants_ids" colspan="4" nolabel="1" attrs="{'readonly':[('state','=','confirmee')]}">
                                     <tree string="Participants" editable="bottom">
+                                        <field name="athletes_id"/>
                                         <field name="epreuve_id"/>
                                         <field name="ligue_id" invisible="1"/>
                                         <field name="club_id"/>
                                         <field name="sexe"/>
-                                        <field name="athletes_id"/>
                                         <field name="athletes_name" invisible="1"/>
                                         <field name="athletes_prenom" invisible="1"/>
                                         <field name="engage"/>
@@ -363,6 +363,6 @@
         </record>
         <menuitem action="action_view_resultats_form"
             id="menu_action_view_resultats_form" parent="base.menu_root_competition_epreuve"
-            sequence="2"/>
+            sequence="2"/>    
     </data>
 </odoo>
