--- a/sports_athletic/wizard/wizard_liasse.xml
+++ b/sports_athletic/wizard/wizard_liasse.xml
@@ -18,7 +18,7 @@
                     <separator string="" colspan="4"/>
                     <group colspan="4" col="6">
                         <button icon="gtk-cancel" special="cancel" string="Cancel"/>
-						<button name="print_report" type="object" string="imprimer" icon="gtk-go-forward" />
+						<!-- <button name="print_report" type="object" string="imprimer" icon="gtk-go-forward" /> -->
                     </group>
 				</form>
 			</field>
